[project]
name = "nwm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "dask>=2025.5.1",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "metpy>=1.7.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tqdm-joblib>=0.0.4",
    "xarray[io]>=2025.6.1",
]

[project.scripts]
nwm = "nwm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "notebook>=7.4.4",
]
